--- a/index.html
+++ b/index.html
@@ -139,4 +139,4 @@
       document.getElementById('goTop').addEventListener('click', refreshActive);
       document.getElementById('qTop').addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
       document.getElementById('back').addEventListener('click', ()=> {
-        document.getElementById('results
+        document.getElementBy
