--- a/index.html
+++ b/index.html
@@ -2,141 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Searchmas 🎅🎄</title>
+  <title>Childmas Search Engine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    html,body {height:100%;margin:0;font-family:sans-serif;color:#fff;}
-    .bg-split {position:fixed;inset:0;display:flex;}
-    .bg-half {flex:1;background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;}
-    .card {position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-      width:min(800px,95%);padding:20px;background:rgba(0,0,0,0.8);border-radius:16px;
-      display:flex;flex-direction:column;align-items:center;justify-content:flex-start;}
-    h1 {margin:0 0 16px;text-align:center;font-size:2em;}
-    .bar {display:flex;gap:10px;margin-bottom:12px;width:100%;justify-content:center;}
-    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;background:#1b1b1b;color:#fff;max-width:420px;}
-    .bar button {padding:12px;border-radius:8px;border:none;background:#ff5ca8;color:#fff;cursor:pointer;}
-    .tabs {display:flex;gap:8px;flex-wrap:wrap;margin:12px 0;justify-content:center;width:100%;}
-    .tabs button {padding:8px 12px;border-radius:6px;background:#333;color:#fff;border:none;cursor:pointer;}
-    .tabs button.active {background:#ff5ca8;}
-    #content {margin-top:8px;width:100%;max-height:420px;overflow-y:auto;}
-    .item {margin-bottom:12px;display:flex;align-items:center;gap:10px;}
-    .item img {width:24px;height:24px;object-fit:contain;}
-    .chatgpt-icon {background:#fff;border-radius:50%;padding:4px;}
-    .item a {color:#fff;text-decoration:none;font-weight:bold;}
-    .item a:hover {text-decoration:underline;}
-    .photo-grid {display:grid;grid-template-columns:repeat(4,1fr);gap:10px;justify-items:center;}
-    .photo-grid img {width:120px;height:120px;object-fit:cover;border-radius:8px;background:#222;}
+    body { margin:0; font-family:sans-serif; background:#111; color:#eee; }
+    .split { display:flex; height:100vh; }
+    .half { flex:1; background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
+    .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
+    h1 { margin:0 0 12px; text-align:center; }
+    .searchbar { display:flex; gap:10px; margin-bottom:20px; }
+    .searchbar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
+    .searchbar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
+    .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:20px 0; }
+    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff; border:none; cursor:pointer; }
+    .tabs button.active { background:#ff5ca8; }
+    #resultsContent { margin-top:20px; }
+    .item { margin-bottom:14px; display:flex; align-items:center; gap:10px; }
+    .item img.favicon { width:32px; height:32px; }
+    .item a { color:#fff; text-decoration:none; font-weight:bold; }
+    .item a:hover { text-decoration:underline; }
+    .desc { font-size:0.9em; color:#ccc; margin-left:42px; }
+    .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
+    .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
   </style>
 </head>
 <body>
-  <div class="bg-split"><div class="bg-half"></div><div class="bg-half"></div></div>
-  <div class="card">
-    <div id="home">
-      <h1>Searchmas 🎅🎄</h1>
-      <div class="bar">
-        <input id="q" type="text" placeholder="Search…">
-        <button id="go">Search</button>
+  <div class="split">
+    <div class="half"></div>
+    <div class="half"></div>
+    <div class="card">
+      <div id="home">
+        <h1>Childmas</h1>
+        <div class="searchbar">
+          <input id="query" type="text" placeholder="Search…" />
+          <button id="searchBtn">Search</button>
+        </div>
       </div>
-    </div>
-    <div id="results" style="display:none;width:100%;">
-      <div class="bar">
-        <input id="qTop" type="text" placeholder="Search…">
-        <button id="goTop">Go</button>
-        <button id="back">Back</button>
+      <div id="results" style="display:none;">
+        <div class="searchbar">
+          <input id="queryTop" type="text" />
+          <button id="goBtn">Go</button>
+          <button id="backBtn">Back</button>
+        </div>
+        <div class="tabs">
+          <button id="tabWeb" class="active">Websites</button>
+          <button id="tabImages">Images</button>
+          <button id="tabVideos">Videos</button>
+          <button id="tabNews">News</button>
+          <button id="tabDiscuss">Discussions</button>
+        </div>
+        <div id="resultsContent">Results will appear here…</div>
       </div>
-      <div class="tabs">
-        <button id="tabWeb" class="active">Web</button>
-        <button id="tabImages">Images</button>
-        <button id="tabVideos">Videos</button>
-        <button id="tabNews">News</button>
-        <button id="tabDiscuss">Discuss</button>
-      </div>
-      <div id="content"></div>
     </div>
   </div>
   <script>
-    const wikiIcon='https://en.wikipedia.org/static/favicon/wikipedia.ico';
-
-    function getQuery(){return (document.getElementById('qTop').value.trim()||document.getElementById('q').value.trim());}
-    function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
-    function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
-
-    function enterResults(){
-      const query=getQuery();
-      if(!query){alert("Type something to search");return;}
-      document.getElementById('home').style.display='none';
-      document.getElementById('results').style.display='block';
-      document.getElementById('qTop').value=query;
-      showWeb();
-    }
-
-    function refreshActive(){
-      const id=activeTab();
-      if(id==='tabWeb') showWeb();
-      else if(id==='tabImages') showImages();
-      else if(id==='tabVideos') showVideos();
-      else if(id==='tabNews') showNews();
-      else if(id==='tabDiscuss') showDiscuss();
-    }
-
-    function item(label,url,iconUrl,isChatGPT=false){
-      const cls=isChatGPT?'chatgpt-icon':'';
-      return `<div class="item"><img src="${iconUrl}" class="${cls}" alt=""><a href="${url}" target="_blank">${label}</a></div>`;
-    }
-
-    function showWeb(){
-      const query=getQuery(); if(!query) return;
-      setActive('tabWeb');
-      document.getElementById('content').innerHTML =
-        item('Google: '+query,'https://www.google.com/search?q='+encodeURIComponent(query),'https://www.google.com/favicon.ico')+
-        item('ChatGPT: '+query,'https://chat.openai.com/?q='+encodeURIComponent(query),'https://chat.openai.com/favicon.ico',true)+
-        item('Wikipedia: '+query,'https://en.wikipedia.org/wiki/'+encodeURIComponent(query),wikiIcon);
-    }
-
-    async function showImages(){
-      const query=getQuery(); if(!query) return;
-      setActive('tabImages');
-      try{
-        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
-        const data=await res.json();
-        let html='<div class="photo-grid">';
-        (data.results||[]).slice(0,12).forEach(img=>{
-          html+=`<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${query}"></a>`;
-        });
-        html+='</div>';
-        document.getElementById('content').innerHTML=html || '<p>No images found.</p>';
-      }catch{document.getElementById('content').innerHTML='<p>Could not load images.</p>';}
-    }
-
-    function showVideos(){
-      const query=getQuery(); if(!query) return;
-      setActive('tabVideos');
-      document.getElementById('content').innerHTML =
-        item('YouTube: '+query,'https://www.youtube.com/results?search_query='+encodeURIComponent(query),'https://www.youtube.com/favicon.ico')+
-        item('Netflix: '+query,'https://www.netflix.com/search?q='+encodeURIComponent(query),'https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico');
-    }
-
-    function showNews(){
-      const query=getQuery(); if(!query) return;
-      setActive('tabNews');
-      document.getElementById('content').innerHTML =
-        item('Google News: '+query,'https://news.google.com/search?q='+encodeURIComponent(query),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png')+
-        item('Wikipedia Current Events','https://en.wikipedia.org/wiki/Portal:Current_events',wikiIcon);
-    }
-
-    function showDiscuss(){
-      const query=getQuery(); if(!query) return;
-      setActive('tabDiscuss');
-      document.getElementById('content').innerHTML =
-        item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query),'https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png')+
-        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query),'https://www.quora.com/favicon.ico');
-    }
-
-    // Attach listeners after DOM is ready
-    window.onload = () => {
-      document.getElementById('go').addEventListener('click', enterResults);
-      document.getElementById('q').addEventListener('keydown', e=>{if(e.key==='Enter') enterResults();});
-      document.getElementById('goTop').addEventListener('click', refreshActive);
-      document.getElementById('qTop').addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
-      document.getElementById('back').addEventListener('click', ()=> {
-        document.getElementBy
+    const home=document.getElementById('home');
+    const results=document.getElementById('results');
+    const qInput=document.getElementById('query');
+    const qTop=document.getElementById('queryTop');
+    const content=document.getElementById('resultsContent');
+    document.getElementById('searchBtn').onclick=()=>enterResults();
+    document.getElementById('goBtn').onclick=()=>refreshActive();
+    document.getElementById('backBtn').onclick=()=>{results.style.display='none';home.style.display='block';};
+    qInput.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); enterResults(); } });
+    qTop.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); refreshActive(); } });
+    function getQuery(){ return (qTop.value.trim()||qInput.value.trim()); }
+    function setActive(tabId){ ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].forEach(id => document.getElementById(id).classList.remove('active')); document.getElementById(tabId).classList.add('active'); }
+    function activeTabId(){ return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].find(id => document.getElementById(id).classList.contains('active')) || 'tabWeb'; }
+    function enterResults(){ const q=getQuery(); if(!q)return; home.style.display='none'; results.style.display='block'; qTop.value=q; showWeb(); }
+    function refreshActive(){ const id=activeTabId(); if(id==='tabWeb') showWeb(); else if(id==='tabImages') showImages(); else if(id==='tabVideos') showVideos(); else if(id==='tabNews') showNews(); else showDiscuss(); }
+    function item(label,url,favicon,desc){ return `<div class="item"><img class="favicon" src="${favicon}" alt=""><a href="${url}" target="_blank">${label}</a></div><div class="desc">${desc}</div>`; }
+    function showWeb(){ const q=getQuery(); if(!q)return; setActive('tabWeb'); content.innerHTML= item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q),'https://www.google.com/favicon.ico','Search with Google')+ item('Bing: '+q,'https://www.bing.com/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Search with Bing')+ item('Gemini: '+q,'https://gemini.google.com/app/search?q='+encodeURIComponent(q),'gemini.png','Search with Gemini')+ item('ChatGPT: '+q,'https://chat.openai.com/?q='+encodeURIComponent(q),'https://chat.openai.com/favicon.ico','Search with ChatGPT'); }
+    async function showImages(){ const q=getQuery(); if(!q)return; setActive('tabImages'); try { const res = await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`); const data = await res.json(); let grid='<div class="photo-grid">'; data.results.forEach(img=>{ grid += `<img src="${img.urls.small}" alt="${q}">`; }); grid+='</div>'; content.innerHTML=grid; } catch(err){ content.innerHTML='<p>Could not load images.</p>'; } }
+    function showVideos(){ const q=getQuery(); if(!q)return; setActive('tabVideos'); content.innerHTML= item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q),'https://www.youtube.com/favicon.ico','Videos on YouTube')+ item('Bing Videos: '+q,'https://www.bing.com/videos/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Videos on Bing'); }
+    function showNews(){ const q=getQuery(); if(!q)return; setActive('tabNews'); content.innerHTML= item('Google News: '+q,'https://news.google.com/search?q='+encodeURIComponent(q),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png','News from Google')+ item('Bing News: '+q,'https://www.bing.com/news/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','News from Bing'); }
+    function showDiscuss(){ const q=getQuery(); if(!q)return; setActive('tabDiscuss'); content.innerHTML= item('Reddit: '+q,'https://www.reddit.com/search/?q='+encodeURIComponent(q),'https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png','Discussions on Reddit')+ item('Quora: '+q,'https://www.quora.com/search?q='+encodeURIComponent(q),'https://www.quora.com/favicon.ico','Discussions on Quora'); }
+    document.getElementById('tabWeb').onclick=showWeb;
+    document.getElementById('tabImages').onclick=showImages;
+    document.getElementById('tabVideos').onclick=showVideos;
+    document.getElementById('tabNews').onclick=showNews;
+    document.getElementById('tabDiscuss').onclick=showDiscuss;
+  </script>
+</body>
+</html>
