--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ html, body {
   background-image: url("Santa.png"); 
   background-size: cover;
   background-position: center;
-  filter: opacity(100%);
+  opacity: 1; /* fully visible */
 }
 
 /* HOME */
@@ -39,6 +39,7 @@ html, body {
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  background: transparent; /* let background show */
 }
 
 #home h1 {
@@ -59,6 +60,7 @@ input {
   border-radius: 12px;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  background: rgba(255,255,255,0.9); /* slightly transparent so background shows */
 }
 
 /* RESULTS */
@@ -66,6 +68,7 @@ input {
   display: none;
   padding: 16px;
   position: relative;
+  background: transparent; /* let background show */
 }
 
 #resultsHeader {
@@ -129,7 +132,7 @@ input {
   font-weight: bold;
 }
 
-/* Results buttons as big as text only */
+/* Result buttons */
 .resultArea {
   margin-top: 12px;
   display: flex;
@@ -148,7 +151,7 @@ input {
   color: black;
   font-size: 16px;
   height: 48px;
-  width: fit-content; /* only as wide as content */
+  width: fit-content; /* width only as needed */
 }
 
 .buttonLink img {
