--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Searchmas</title>
-  <!-- Mobile-friendly viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -13,54 +12,77 @@
       background-color: #fff;
       color: #333;
     }
-    header {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      border-bottom: 1px solid #ccc;
-    }
-    header img {
-      height: 40px;
-      margin-right: 10px;
-    }
-    header h1 {
-      font-size: 24px;
-      font-weight: bold;
-      flex-wrap: wrap;
-    }
-    .search-box {
+    .homepage {
       text-align: center;
-      margin: 15px;
+      padding-top: 15%;
     }
+    .homepage h1 {
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 16px;
+    }
+    .homepage h1 span:nth-child(1){color:#4285f4;}
+    .homepage h1 span:nth-child(2){color:#ea4335;}
+    .homepage h1 span:nth-child(3){color:#fbbc05;}
+    .homepage h1 span:nth-child(4){color:#34a853;}
+    .homepage h1 span:nth-child(5){color:#4285f4;}
+    .homepage h1 span:nth-child(6){color:#ea4335;}
+    .homepage h1 span:nth-child(7){color:#fbbc05;}
+    .homepage h1 span:nth-child(8){color:#34a853;}
+    .homepage h1 span:nth-child(9){color:#4285f4;}
     input[type="text"] {
       width: 90%;
-      max-width: 500px;
-      padding: 10px;
-      font-size: 16px;
+      max-width: 600px;
+      padding: 12px;
+      font-size: 18px;
       border-radius: 4px;
       border: 1px solid #ccc;
     }
+
+    /* Results header */
+    .results-header {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      background: #fff;
+    }
+    .results-header button {
+      padding: 8px 12px;
+      border: 1px solid #ccc;
+      background: #f9f9f9;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .results-header img.logo {
+      height: 28px;
+    }
+    .results-header .brand {
+      font-weight: bold;
+      font-size: 18px;
+      color: #333;
+    }
+
+    /* Tabs */
     .tabs {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       border-bottom: 1px solid #ccc;
+      background: #fff;
     }
     .tab {
-      padding: 8px 12px;
+      padding: 10px 16px;
       cursor: pointer;
       text-align: center;
-      flex: 1 1 auto;
-      min-width: 80px;
     }
     .tab.active {
       border-bottom: 3px solid #4285f4;
       font-weight: bold;
     }
-    .tab-desc {
-      font-size: 11px;
-      color: #666;
-    }
+
+    /* Content areas */
     .tab-content {
       display: none;
       padding: 10px;
@@ -68,16 +90,26 @@
     .tab-content.active {
       display: block;
     }
+
+    /* Link buttons with favicons */
     .link-button {
-      display: block;
-      margin: 6px 0;
-      padding: 8px;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      margin: 6px 8px 6px 0;
+      padding: 8px 10px;
       background: #f1f1f1;
       border: none;
-      text-align: left;
+      border-radius: 6px;
       cursor: pointer;
       font-size: 14px;
     }
+    .link-button img {
+      height: 16px;
+      width: 16px;
+    }
+
+    /* Images grid */
     .images-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
@@ -87,126 +119,114 @@
       width: 100%;
       border-radius: 6px;
     }
-    iframe {
+
+    /* Flights map */
+    #flightMap {
       width: 100%;
-      height: 400px;
-      border: none;
+      height: 420px;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    @media (min-width: 768px) {
+      #flightMap { height: 520px; }
     }
   </style>
+
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
 </head>
 <body>
-  <header>
-    <img src="Santa.png" alt="Searchmas Logo">
+  <!-- Homepage -->
+  <div class="homepage" id="home">
     <h1>
-      <span style="color:#4285f4;">S</span>
-      <span style="color:#ea4335;">e</span>
-      <span style="color:#fbbc05;">a</span>
-      <span style="color:#34a853;">r</span>
-      <span style="color:#4285f4;">c</span>
-      <span style="color:#ea4335;">h</span>
-      <span style="color:#fbbc05;">m</span>
-      <span style="color:#34a853;">a</span>
-      <span style="color:#4285f4;">s</span>
+      <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
     </h1>
-  </header>
-
-  <div class="search-box">
     <input type="text" id="query" placeholder="Search...">
   </div>
 
-  <div class="tabs">
-    <div class="tab active" onclick="openTab('all')">
-      All
-      <div class="tab-desc">Google & Bing results</div>
+  <!-- Results -->
+  <div id="results" style="display:none;">
+    <div class="results-header">
+      <button onclick="goHome()">Back</button>
+      <img src="Santa.png" alt="Searchmas" class="logo">
+      <div class="brand">Searchmas</div>
     </div>
-    <div class="tab" onclick="openTab('images')">
-      Images
-      <div class="tab-desc">Unsplash photos</div>
+
+    <div class="tabs">
+      <div class="tab active" onclick="openTab('all')">All</div>
+      <div class="tab" onclick="openTab('images')">Images</div>
+      <div class="tab" onclick="openTab('videos')">Videos</div>
+      <div class="tab" onclick="openTab('flights')">Flights</div>
+      <div class="tab" onclick="openTab('news')">News</div>
+      <div class="tab" onclick="openTab('discussions')">Discussions</div>
     </div>
-    <div class="tab" onclick="openTab('videos')">
-      Videos
-      <div class="tab-desc">YouTube search</div>
+
+    <div id="all" class="tab-content active">
+      <button class="link-button" onclick="window.open('https://www.google.com/search?q='+getQuery())">
+        <img src="https://www.google.com/favicon.ico" alt=""> Google
+      </button>
+      <button class="link-button" onclick="window.open('https://www.bing.com/search?q='+getQuery())">
+        <img src="https://www.bing.com/favicon.ico" alt=""> Bing
+      </button>
     </div>
-    <div class="tab" onclick="openTab('flights')">
-      Flights
-      <div class="tab-desc">Live flight tracking</div>
+
+    <div id="images" class="tab-content">
+      <div class="images-grid" id="imagesGrid"></div>
     </div>
-    <div class="tab" onclick="openTab('news')">
-      News
-      <div class="tab-desc">Google News</div>
+
+    <div id="videos" class="tab-content">
+      <button class="link-button" onclick="window.open('https://www.youtube.com/results?search_query='+getQuery())">
+        <img src="https://www.youtube.com/favicon.ico" alt=""> YouTube
+      </button>
     </div>
-    <div class="tab" onclick="openTab('discussions')">
-      Discussions
-      <div class="tab-desc">Reddit & Quora</div>
+
+    <div id="flights" class="tab-content">
+      <div id="flightMap"></div>
+    </div>
+
+    <div id="news" class="tab-content">
+      <button class="link-button" onclick="window.open('https://news.google.com/search?q='+getQuery())">
+        <img src="https://www.google.com/favicon.ico" alt=""> Google News
+      </button>
+    </div>
+
+    <div id="discussions" class="tab-content">
+      <button class="link-button" onclick="window.open('https://www.reddit.com/search/?q='+getQuery())">
+        <img src="https://www.reddit.com/favicon.ico" alt=""> Reddit
+      </button>
+      <button class="link-button" onclick="window.open('https://www.quora.com/search?q='+getQuery())">
+        <img src="https://www.quora.com/favicon.ico" alt=""> Quora
+      </button>
     </div>
   </div>
 
-  <div id="all" class="tab-content active">
-    <button class="link-button" onclick="window.open('https://www.google.com/search?q='+getQuery())">Google – Powerful global search engine</button>
-    <button class="link-button" onclick="window.open('https://www.bing.com/search?q='+getQuery())">Bing – Microsoft’s search platform</button>
-  </div>
-
-  <div id="images" class="tab-content">
-    <div class="images-grid" id="imagesGrid"></div>
-  </div>
-
-  <div id="videos" class="tab-content">
-    <button class="link-button" onclick="window.open('https://www.youtube.com/results?search_query='+getQuery())">
-      YouTube – Video search and streaming
-    </button>
-  </div>
-
-  <div id="flights" class="tab-content">
-    <iframe src="https://www.flightradar24.com/" title="Flightradar24"></iframe>
-  </div>
-
-  <div id="news" class="tab-content">
-    <button class="link-button" onclick="window.open('https://news.google.com/search?q='+getQuery())">
-      Google News – Latest headlines and coverage
-    </button>
-  </div>
-
-  <div id="discussions" class="tab-content">
-    <button class="link-button" onclick="window.open('https://www.reddit.com/search/?q='+getQuery())">
-      Reddit – Community-driven discussions
-    </button>
-    <button class="link-button" onclick="window.open('https://www.quora.com/search?q='+getQuery())">
-      Quora – Q&A from experts and enthusiasts
-    </button>
-  </div>
+  <!-- Leaflet JS -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
 
   <script>
-    // Trigger search on Enter key
+    // Enter triggers search
     document.getElementById('query').addEventListener('keypress', function(e) {
-      if (e.key === 'Enter') {
-        showResults();
-      }
+      if (e.key === 'Enter') showResults();
     });
 
     function getQuery() {
       return document.getElementById('query').value;
     }
+
     function showResults() {
-      fetch('https://api.unsplash.com/search/photos?query=' + getQuery() + '&client_id=1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk')
-        .then(response => response.json())
-        .then(data => {
-          const grid = document.getElementById('imagesGrid');
-          grid.innerHTML = '';
-          data.results.forEach(photo => {
-            const img = document.createElement('img');
-            img.src = photo.urls.small;
-            grid.appendChild(img);
-          });
-        });
-    }
-    function openTab(tabId) {
-      const tabs = document.querySelectorAll('.tab');
-      const contents = document.querySelectorAll('.tab-content');
-      tabs.forEach(t => t.classList.remove('active'));
-      contents.forEach(c => c.classList.remove('active'));
-      document.querySelector('.tab[onclick="openTab(\''+tabId+'\')"]').classList.add('active');
-      document.getElementById(tabId).classList.add('active');
-    }
-  </script>
-</body>
-</html>
+      document.getElementById('home').style.display = 'none';
+      document.getElementById('results').style.display = 'block';
+
+      // Load Unsplash images
+      fetch('https://api.unsplash.com/search/photos?query=' + encodeURIComponent(getQuery()) + '&client_id=1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk')
+        .then(r => r.json())
