--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
       border-radius: 4px;
       cursor: pointer;
     }
-    .results-header img.logo {
-      height: 28px;
-    }
     .results-header .brand {
       font-weight: bold;
       font-size: 18px;
@@ -93,20 +90,22 @@
     }
 
     .link-button {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      margin: 6px 8px 6px 0;
-      padding: 8px 10px;
+      display: block;
+      width: 100%;
+      text-align: left;
+      margin: 10px 0;
+      padding: 16px;
       background: #f1f1f1;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      font-size: 14px;
+      font-size: 18px;
     }
     .link-button img {
-      height: 16px;
-      width: 16px;
+      height: 20px;
+      width: 20px;
+      margin-right: 10px;
+      vertical-align: middle;
     }
 
     .images-grid {
@@ -119,15 +118,15 @@
       border-radius: 6px;
     }
 
-    #flightMap {
-      width: 100%;
-      height: 420px;
-      border-radius: 8px;
+    /* Mobile optimization */
+    @media (max-width: 600px) {
+      .homepage h1 { font-size: 36px; }
+      input[type="text"] { font-size: 16px; }
+      .link-button { font-size: 16px; padding: 14px; }
     }
   </style>
 </head>
 <body>
-  <!-- Homepage -->
   <div class="homepage" id="home">
     <h1>
       <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
@@ -135,11 +134,9 @@
     <input type="text" id="query" placeholder="Search...">
   </div>
 
-  <!-- Results -->
   <div class="results" id="results" style="display:none;">
     <div class="results-header">
       <button onclick="goHome()">Back</button>
-      <img src="Santa.png" alt="Searchmas" class="logo">
       <div class="brand">Searchmas</div>
     </div>
 
@@ -172,7 +169,8 @@
     </div>
 
     <div id="flights" class="tab-content">
-      <div id="flightMap">[Map placeholder]</div>
+      <!-- Flightradar24 embeddable widget -->
+      <iframe src="https://www.flightradar24.com/simple" width="100%" height="600" style="border:none;"></iframe>
     </div>
 
     <div id="news" class="tab-content">
@@ -192,18 +190,15 @@
   </div>
 
   <script>
-    // Enter triggers search
     document.getElementById('query').addEventListener('keydown', function(e) {
       if (e.key === 'Enter') showResults();
     });
-
     function getQuery() {
       return document.getElementById('query').value;
     }
     function showResults() {
       document.getElementById('home').style.display = 'none';
       document.getElementById('results').style.display = 'block';
-      // Unsplash images
       fetch('https://api.unsplash.com/search/photos?query=' + encodeURIComponent(getQuery()) + '&client_id=1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk')
         .then(r => r.json())
         .then(data => {
