--- a/index.html
+++ b/index.html
@@ -60,69 +60,84 @@
       border-radius: 4px;
       cursor: pointer;
     }
-    .results-header .brand {
+    .results-header h1 {
+      font-size: 28px;
       font-weight: bold;
-      font-size: 18px;
+      margin: 0;
     }
+    .results-header h1 span:nth-child(1){color:#4285f4;}
+    .results-header h1 span:nth-child(2){color:#ea4335;}
+    .results-header h1 span:nth-child(3){color:#fbbc05;}
+    .results-header h1 span:nth-child(4){color:#34a853;}
+    .results-header h1 span:nth-child(5){color:#4285f4;}
+    .results-header h1 span:nth-child(6){color:#ea4335;}
+    .results-header h1 span:nth-child(7){color:#fbbc05;}
+    .results-header h1 span:nth-child(8){color:#34a853;}
+    .results-header h1 span:nth-child(9){color:#4285f4;}
 
+    /* Tabs vertically stacked */
     .tabs {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: stretch;
       border-bottom: 1px solid #ccc;
       background: rgba(255,255,255,0.9);
     }
     .tab {
-      padding: 10px 16px;
+      padding: 14px;
       cursor: pointer;
       text-align: center;
+      font-size: 20px;
+      border-bottom: 1px solid #ddd;
     }
     .tab.active {
-      border-bottom: 3px solid #4285f4;
+      background: #e8f0fe;
       font-weight: bold;
     }
 
     .tab-content {
       display: none;
-      padding: 10px;
+      padding: 20px;
     }
     .tab-content.active {
       display: block;
     }
 
     .link-button {
-      display: block;
+      display: flex;
+      align-items: center;
+      gap: 12px;
       width: 100%;
-      text-align: left;
-      margin: 10px 0;
-      padding: 16px;
+      margin: 12px 0;
+      padding: 20px;
       background: #f1f1f1;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 20px;
     }
     .link-button img {
-      height: 20px;
-      width: 20px;
-      margin-right: 10px;
-      vertical-align: middle;
+      height: 24px;
+      width: 24px;
     }
 
     .images-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-      gap: 8px;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 10px;
     }
     .images-grid img {
       width: 100%;
       border-radius: 6px;
     }
 
-    /* Mobile optimization */
     @media (max-width: 600px) {
       .homepage h1 { font-size: 36px; }
       input[type="text"] { font-size: 16px; }
+      .results-header h1 { font-size: 22px; }
+      .tab { font-size: 16px; padding: 10px; }
       .link-button { font-size: 16px; padding: 14px; }
+      .link-button img { height: 18px; width: 18px; }
     }
   </style>
 </head>
@@ -137,7 +152,9 @@
   <div class="results" id="results" style="display:none;">
     <div class="results-header">
       <button onclick="goHome()">Back</button>
-      <div class="brand">Searchmas</div>
+      <h1>
+        <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span><span>m</span><span>a</span><span>s</span>
+      </h1>
     </div>
 
     <div class="tabs">
@@ -169,7 +186,6 @@
     </div>
 
     <div id="flights" class="tab-content">
-      <!-- Flightradar24 embeddable widget -->
       <iframe src="https://www.flightradar24.com/simple" width="100%" height="600" style="border:none;"></iframe>
     </div>
 
@@ -200,29 +216,4 @@
       document.getElementById('home').style.display = 'none';
       document.getElementById('results').style.display = 'block';
       fetch('https://api.unsplash.com/search/photos?query=' + encodeURIComponent(getQuery()) + '&client_id=1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk')
-        .then(r => r.json())
-        .then(data => {
-          const grid = document.getElementById('imagesGrid');
-          grid.innerHTML = '';
-          data.results.forEach(photo => {
-            const img = document.createElement('img');
-            img.src = photo.urls.small;
-            grid.appendChild(img);
-          });
-        });
-    }
-    function goHome() {
-      document.getElementById('home').style.display = 'block';
-      document.getElementById('results').style.display = 'none';
-    }
-    function openTab(tabId) {
-      const tabs = document.querySelectorAll('.tab');
-      const contents = document.querySelectorAll('.tab-content');
-      tabs.forEach(t => t.classList.remove('active'));
-      contents.forEach(c => c.classList.remove('active'));
-      document.querySelector('.tab[onclick="openTab(\''+tabId+'\')"]').classList.add('active');
-      document.getElementById(tabId).classList.add('active');
-    }
-  </script>
-</body>
-</html>
+        .then(r => r.json
