--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 <link rel="manifest" href="manifest.json">
 <link rel="icon" href="favicon.ico">
 <meta name="theme-color" content="#1a73e8">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Searchmas">
 
 <style>
-html,body{margin:0;padding:0;width:100%;height:100%;font-family:Arial,sans-serif}
+html,body{
+  margin:0;padding:0;
+  width:100%;height:100%;
+  font-family:Arial,sans-serif;
+}
 
-/* WEBSITE MODE */
+/* BACKGROUND */
+body{
+  background:
+    url('Santa.png') left center / 50% 100vh no-repeat,
+    url('Santa.png') right center / 50% 100vh no-repeat;
+}
+
+/* HOME */
 #site{
   min-height:100vh;
   display:flex;
@@ -22,13 +31,14 @@ html,body{margin:0;padding:0;width:100%;height:100%;font-family:Arial,sans-serif
   justify-content:center;
   align-items:center;
   text-align:center;
+  padding:20px;
 }
 #site input{
   padding:14px 20px;
   font-size:18px;
   border-radius:24px;
   border:1px solid #dfe1e5;
-  width:80%;
+  width:100%;
   max-width:500px;
 }
 
@@ -45,24 +55,69 @@ html,body{margin:0;padding:0;width:100%;height:100%;font-family:Arial,sans-serif
 .logo span.g{color:#34a853}
 
 /* RESULTS */
-#results{display:none;padding:15px;max-width:1100px;margin:0 auto}
-.topbar{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
-.back{cursor:pointer;font-size:22px}
-.tabs{display:flex;gap:25px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap}
-.tab{cursor:pointer;color:#5f6368;padding:10px 0}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
-.engine{display:flex;align-items:center;gap:14px;font-size:22px;margin:18px 0;cursor:pointer}
-.engine img{width:36px;height:36px}
+#results{
+  display:none;
+  padding:15px;
+  max-width:1100px;
+  margin:0 auto;
+}
+.topbar{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  flex-wrap:wrap;
+}
+.back{
+  cursor:pointer;
+  font-size:22px;
+}
+.tabs{
+  display:flex;
+  gap:25px;
+  margin:15px 0;
+  border-bottom:1px solid #ddd;
+  flex-wrap:wrap;
+}
+.tab{
+  cursor:pointer;
+  color:#5f6368;
+  padding:10px 0;
+}
+.tab.active{
+  color:#1a73e8;
+  border-bottom:3px solid #1a73e8;
+}
+.engine{
+  display:flex;
+  align-items:center;
+  gap:14px;
+  font-size:20px;
+  margin:16px 0;
+  cursor:pointer;
+}
+.engine img{
+  width:32px;
+  height:32px;
+}
 
+/* MOBILE FIX */
 @media(max-width:768px){
-  .logo{font-size:48px}
+  body{
+    background:url('Santa.png') center/cover no-repeat;
+  }
+  .logo{
+    font-size:48px;
+  }
+  .engine{
+    font-size:18px;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<!-- WEBSITE MODE -->
+<!-- HOME -->
 <div id="site">
   <div class="logo">
     <span class="b">S</span><span class="r">e</span><span class="y">a</span><span class="b">r</span>
@@ -76,7 +131,7 @@ html,body{margin:0;padding:0;width:100%;height:100%;font-family:Arial,sans-serif
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <div class="logo" style="font-size:28px">
+    <div class="logo" style="font-size:26px">
       <span class="b">S</span><span class="r">e</span><span class="y">a</span><span class="b">r</span>
       <span class="g">c</span><span class="r">h</span>
       <span class="b">m</span><span class="y">a</span><span class="g">s</span>
@@ -172,7 +227,8 @@ function search(){
   if(tab==="news"){
     content.innerHTML=`
       <div class="engine" onclick="window.open('https://news.google.com/search?q=${enc}')">
-        <img src="https://static.vecteezy.com/system/resources/previews/022/613/029/large_2x/google-news-icon-logo-symbol-free-png.png"> Google News
+        <img src="https://static.vecteezy.com/system/resources/previews/022/613/029/large_2x/google-news-icon-logo-symbol-free-png.png">
+        Google News
       </div>`;
   }
 }
